@@ -1,13 +1,0 @@
-[Desktop Entry]
-X-SuSE-translate=true
-Name=YaST2 Control Center
-Icon=yast
-Exec=@BINDIR@/y2controlcenter-gnome
-Terminal=false
-Type=Application
-StartupNotify=true
-Encoding=UTF-8
-Categories=GNOME;SystemSetup;X-SuSE-Core-System;X-SuSE-ControlCenter-System
-OnlyShowIn=GNOME;
-X-KDE-RootOnly=true
-X-KDE-SubstituteUID=true
